Settings no longer overlapping

--- a/my-app/src/components/css/SettingsPage.css
+++ b/my-app/src/components/css/SettingsPage.css
@@ -45,7 +45,7 @@
 	height: 23vh;
 }
 
-.emailContainer{
+.emailContainerS{
 	width: 50vw;
 	height: 5vh;
 	font-family: Arial Black;
@@ -56,7 +56,7 @@
 	margin-bottom: 2vh;
 }
 
-.emailText{
+.emailTextS{
 	margin-left: 0vw;
 	font-family: Arial;
 	font-style: normal;
@@ -106,7 +106,7 @@
 	flex-direction: row;
 }
 
-.emailInputBox{
+.emailInputBoxS{
 	margin-top: 0vh;
 	margin-right: 0vw;
 	margin-left: auto;
@@ -352,10 +352,10 @@
     background: #0094FF;
     border: 1px solid #000000;
     box-sizing: border-box;
-	margin-left: 65vw;
+	margin-left: 72vw;
 	margin-right: 1vw;
-	margin-bottom: 0px;
-	margin-top: 30vh;
+	margin-bottom: 10px;
+	margin-top: 18vh;
 }
 
 .deactivateAccountButton{
